BFD-2945: Cleanup of various code smells and some bugs (#2056)